--- a/src/app/shared/components/notifications/notifications.component.scss
+++ b/src/app/shared/components/notifications/notifications.component.scss
@@ -3,5 +3,5 @@
   position: fixed;
   bottom: $padding-medium;
   right: $padding-medium;
-  z-index: 1;
+  z-index: 1000;
 }
